# agent-skill-quality-gate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/duplicate-skills/open-source-readiness/: SKILL.md
examples/duplicate-skills/repo-audit/: SKILL.md
examples/good-skill/: SKILL.md
examples/weak-skill/: SKILL.md
src/agent_skill_quality_gate/: __init__.py  cli.py  findings.py  models.py  parser.py  report.py  scanner.py  scoring.py
src/agent_skill_quality_gate/rules/: __init__.py  clarity.py  duplication.py  publication.py  safety.py  structure.py
tests/: conftest.py  test_report.py  test_rules.py  test_scanner.py  test_scoring.py  test_tuning.py
