[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skill-quality-gate"
version = "0.1.0"
description = "Quality gate for AI agent skills — validates SKILL.md files for clarity, structure, basic safety checks, documented tests, duplication and publication readiness."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SkillLab" }]
keywords = ["ai", "agents", "skills", "quality-gate", "linter", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
# v0.1 is intentionally dependency-free (Python standard library only).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
skillgate = "agent_skill_quality_gate.cli:main"

[project.urls]
Homepage = "https://github.com/migmcc/agent-skill-quality-gate"
Repository = "https://github.com/migmcc/agent-skill-quality-gate"
Issues = "https://github.com/migmcc/agent-skill-quality-gate/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
